--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [DATA FOLDER]
-dataset = 'data'
-images = 'images'
-latex = 'latex'
-model = 'models'
-preprocessed = 'preprocessed'
+dataset = data
+glove = glove
+images = images
+latex = latex
+model = models
+preprocessed = preprocessed
 
 [PLOT]
 data_index = 356
